--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Created by https://www.gitignore.io/api/python
 # Edit at https://www.gitignore.io/?templates=python
 
-.json
+*.json
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
